--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -61,12 +61,12 @@
                     <div class="col">
                         <ul class="navbar float-right">
                             <li><a class="nav-link" href="/">Home</a></li>
-                            <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                            <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                            <li><a class="nav-link " href="/about">Sobre</a></li>
+                            <li><a class="nav-link " href="/services">Serviços</a></li>
                             <li class="nav-item dropdown" ><a class="nav-link"  href="/portfolio" aria-haspopup="true" aria-expanded="false">Trabalhos</a>
                             </li>
-                            <li><a class="nav-link" href="/time">Time</a></li>
-                            <li class=" active"><a class="nav-link" href="/contato">Contato</a></li>
+                            <li><a class="nav-link" href="/team">Time</a></li>
+                            <li class=" active"><a class="nav-link" href="/contact">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,11 +92,11 @@
                  <span class="icon-close"><img src="../res/site/images/close.png" alt="close"/></span>
                 <ul class="navbar-nav ml-auto">
                  <li><a class="nav-link active" href="/">Home</a></li>
-                    <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                    <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                    <li><a class="nav-link " href="/about">Sobre</a></li>
+                    <li><a class="nav-link " href="/services">Serviços</a></li>
                     <li><a class="nav-link" href="/portfolio">Trabalhos</a></li>
-                    <li><a class="nav-link" href="/time">Time</a></li>
-                    <li><a class="nav-link" href="/contato">Contato</a></li>
+                    <li><a class="nav-link" href="/team">Time</a></li>
+                    <li><a class="nav-link" href="/contact">Contato</a></li>
                 </ul>
             </div>
             </div>
@@ -115,11 +115,8 @@
                          </div>
                         <div class="voffset-60"></div>
                     <ul class="js-filters filters">
-                        <li data-filter="*" class="js-inview_h tra20 delay02 is-checked">All Work</li>
-                        <li data-filter=".branding" class="js-inview_h tra20 delay03">Branding</li>
-                        <li data-filter=".webdesign" class="js-inview_h tra20 delay04">Web Design</li>
-                        <li data-filter=".digitaldesign" class="js-inview_h tra20 delay05">Digital Design</li>
-                        <li data-filter=".customprint" class="js-inview_h tra20 delay06">Custom Print</li>
+                        <li data-filter="*" class="js-inview_h tra20 delay02 is-checked">Todos os trabalhos</li>
+                        {include="portifolio-categories"}
                     </ul>
                 </div>
             </div>
@@ -213,7 +210,7 @@
                             </div>
                             
                         </div>
-                        <p class="loadmore"><span class="js-loadmore btn btn-primary">more works</span></p>
+                        <p class="loadmore"><span class="js-loadmore btn btn-primary">Mais Trabalhos</span></p>
                         <div class="js-more-items grid-gallery-more-items">
                             <div class="grid-item "><img src="../res/site/images/demo/work/10.jpg" alt="">
                                 <div class="grid-item__rollover">
