--- a/views/admin/users.html
+++ b/views/admin/users.html
@@ -40,7 +40,7 @@
                                 <td>{if="$value.inadmin == 1"}Sim{else}Não{/if}</td>
                                 <td>
                                   <a href="/admin/users/{$value.iduser}" class="btn btn-primary btn-sm" style="margin-bottom: 5px;"><i class="fa fa-edit"></i> Editar</a>
-                                  <a href="/admin/users/{$value.iduser}/delete" onclick="return confirm('Deseja realmente excluir este registro {$value.desperson}?')" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Excluir</a>
+                                  <a href="/admin/users/{$value.iduser}/delete" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Excluir</a>
                                 </td>
                               </tr>
                               {/loop}
