--- a/views/services.html
+++ b/views/services.html
@@ -61,12 +61,12 @@
                     <div class="col">
                         <ul class="navbar float-right">
                             <li><a class="nav-link" href="/">Home</a></li>
-                            <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                            <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                            <li><a class="nav-link " href="/about">Sobre</a></li>
+                            <li><a class="nav-link " href="/services">Serviços</a></li>
                             <li class="nav-item dropdown" ><a class="nav-link"  href="/portfolio" aria-haspopup="true" aria-expanded="false">Trabalhos</a>
                             </li>
-                            <li><a class="nav-link" href="/time">Time</a></li>
-                            <li class=" active"><a class="nav-link" href="/contato">Contato</a></li>
+                            <li><a class="nav-link" href="/team">Time</a></li>
+                            <li class=" active"><a class="nav-link" href="/contact">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,11 +92,11 @@
                  <span class="icon-close"><img src="../res/site/images/close.png" alt="close"/></span>
                 <ul class="navbar-nav ml-auto">
                  <li><a class="nav-link active" href="/">Home</a></li>
-                    <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                    <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                    <li><a class="nav-link " href="/about">Sobre</a></li>
+                    <li><a class="nav-link " href="/services">Serviços</a></li>
                     <li><a class="nav-link" href="/portfolio">Trabalhos</a></li>
-                    <li><a class="nav-link" href="/time">Time</a></li>
-                    <li><a class="nav-link" href="/contato">Contato</a></li>
+                    <li><a class="nav-link" href="/team">Time</a></li>
+                    <li><a class="nav-link" href="/contact">Contato</a></li>
                 </ul>
             </div>
             </div>
