--- a/views/team.html
+++ b/views/team.html
@@ -61,12 +61,12 @@
                     <div class="col">
                         <ul class="navbar float-right">
                             <li><a class="nav-link" href="/">Home</a></li>
-                            <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                            <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                            <li><a class="nav-link " href="/about">Sobre</a></li>
+                            <li><a class="nav-link " href="/services">Serviços</a></li>
                             <li class="nav-item dropdown" ><a class="nav-link"  href="/portfolio" aria-haspopup="true" aria-expanded="false">Trabalhos</a>
                             </li>
-                            <li><a class="nav-link" href="/time">Time</a></li>
-                            <li class=" active"><a class="nav-link" href="/contato">Contato</a></li>
+                            <li><a class="nav-link" href="/team">Time</a></li>
+                            <li class=" active"><a class="nav-link" href="/contact">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -92,11 +92,11 @@
                  <span class="icon-close"><img src="../res/site/images/close.png" alt="close"/></span>
                 <ul class="navbar-nav ml-auto">
                  <li><a class="nav-link active" href="/">Home</a></li>
-                    <li><a class="nav-link " href="/sobre">Sobre</a></li>
-                    <li><a class="nav-link " href="/servicos">Serviços</a></li>
+                    <li><a class="nav-link " href="/about">Sobre</a></li>
+                    <li><a class="nav-link " href="/services">Serviços</a></li>
                     <li><a class="nav-link" href="/portfolio">Trabalhos</a></li>
-                    <li><a class="nav-link" href="/time">Time</a></li>
-                    <li><a class="nav-link" href="/contato">Contato</a></li>
+                    <li><a class="nav-link" href="/team">Time</a></li>
+                    <li><a class="nav-link" href="/contact">Contato</a></li>
                 </ul>
             </div>
             </div>
@@ -125,7 +125,7 @@
                     <div class="team__slider" data-flickity='{ "cellAlign": "center", "wrapAround": true, "prevNextButtons": false }'>
                         {loop="$users"}
                         <div class="team__item js-inview_h tra20 delay01">
-                            <div class="team__item__content"><img src="../res/site/images/time/wallaceoliveira.jpg" alt="">
+                            <div class="team__item__content"><img src="../res/site/images/team/wallaceoliveira.jpg" alt="">
                                 <p class="team__name">{$value.desperson}</p>
                                 <p class="team__role">Desenvolvedor Web & Editor</p>
                                 <ul class="team__item__social">
