--- a/views/portifolio-categories.html
+++ b/views/portifolio-categories.html
@@ -1,1 +1,1 @@
-<li class="js-inview_h tra20">Empresas</li><li class="js-inview_h tra20">Institucional</li><li class="js-inview_h tra20">Publicitário</li><li class="js-inview_h tra20">Comida</li><li class="js-inview_h tra20">Crianças</li>
+<li data-filter=".Institucional "class="js-inview_h tra20">Institucional </li><li data-filter=".Infantil"class="js-inview_h tra20">Infantil</li><li data-filter=".Carros"class="js-inview_h tra20">Carros</li>
